--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=Spring_Cloud_MSA_Eureka_Server
 
 server.port=8761
 
+eureka.server.peer-node-read-timeout-ms=5000
+
 # ??? ??? ?? ??? ???? ???
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://admin:1234@localhost:8761/eureka
